--- a/styles/interface.css
+++ b/styles/interface.css
@@ -1,14 +1,17 @@
-:root {
+@import url('https://fonts.googleapis.com/css?family=Tangerine');
+
+
+body {
     height: 100vh;
     width: 100vw;
     background-color: #FFCCCC;
 }
 
-：root #time {
+.root #time {
     width: 100vh;
     height: 100px;
     background-color: #EB6E80;
     color: #282828;
+    font-family: 'Tangerine', serif;
     font-size: 70px;
-    font-family: 'Times New Roman', Times, serif;
 }
